<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="superbibi">SuperBibi</string>
    <string name="logo">logo</string>
    <string name="title">title</string>
    <string name="iconepodometre">iconePodometre</string>
    <string name="nombre_de_pas">Nombre de pas :</string>
    <string name="_5">5</string>
    <string name="imcicone">IMCIcone</string>
    <string name="imcgraph">IMCGraph</string>
    <string name="objectificone">ObjectifIcone</string>
    <string name="objectifs">Objectifs :</string>
    <string name="menu">Menu</string>
    <string name="settingsicone">settingsIcone</string>
    <string name="splashscreenlogo">splashScreenLogo</string>
    <string name="splashscreentitle">splashScreenTitle</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="videoexplication">Video explicative</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="imc">IMC</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_weight">enter weight</string>
    <string name="enter_height">enter height</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="log_out">log out</string>
    <string name="register">Register</string>
    <string name="already_register_log_in_here">Already Register ? Log in here</string>
    <string name="log">Log</string>
    <string name="new_here_create_an_account">New Here ? Create an account</string>
    <string name="exercices">Exercices</string>
    <string name="nomexercice">NomExercice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_exercice">Exercices</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_exercice_item">ExerciceItemActivity</string>
    <string name="nomex">nomEx</string>
    <string name="search">Search</string>
    <string name="seancename">seanceName</string>
    <string name="exsets">exSets</string>
    <string name="voir_exercice">Voir Exercice</string>
    <string name="textview">TextView</string>
    <string name="voir_l_exercice">Voir l\'exercice</string>
    <string name="numday">numDay</string>
    <string name="seances">Séances</string>
    <string name="todo">TODO</string>
    <string name="obj">-Perdre 50kg \n-Abdos 8 packs \n-Entrainement saitama \n-Faire carrière en bodybuilding</string>
    <string name="entrainement">Entrainement</string>
    <string name="connexion">Connexion</string>
    <string name="s_inscire">S\'inscire</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="taille">Taille</string>
    <string name="poids">Poids</string>
    <string name="d_connexion">Déconnexion</string>
</resources>