<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    tools:context=".HomePageFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/LogoImageView"
            android:layout_width="84dp"
            android:layout_height="107dp"
            android:layout_marginStart="26dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TitleImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/TitleImageView"
            android:layout_width="175dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title"
            android:src="@drawable/titrebibi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="358dp"
            android:layout_height="320dp"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleImageView">

            <ImageView
                android:id="@+id/PodomètreImageView"
                android:layout_width="47dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/iconepodometre"
                android:src="@drawable/podom_tre_ic_ne"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/PodometreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/nombre_de_pas"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PodomètreImageView" />

            <TextView
                android:id="@+id/NombreDePasTextView"
                android:layout_width="32dp"
                android:layout_height="36dp"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PodometreTextView" />

            <ImageView
                android:id="@+id/IMCIconeImageView"
                android:layout_width="55dp"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/imcicone"
                android:src="@drawable/icone_imc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/GraphIMCImageView"
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/imcgraph"
                android:src="@drawable/graph_imc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/IMCIconeImageView" />

            <ImageView
                android:id="@+id/ObjectifIconeImageView"
                android:layout_width="92dp"
                android:layout_height="76dp"
                android:contentDescription="@string/objectificone"
                android:src="@drawable/objectif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NombreDePasTextView" />

            <TextView
                android:id="@+id/ObjectifTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/objectifs"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ObjectifIconeImageView"
                app:layout_constraintTop_toBottomOf="@+id/GraphIMCImageView" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="160dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="@+id/divider2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider"
                tools:layout_editor_absoluteX="-32dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/menu"
            app:layout_constraintEnd_toStartOf="@+id/TitleImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>